--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       
       <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
           <button ng-click="controller.runCode()" type="button" class="btn btn-default">Ejecutar el código</button>
-          <blockly options="controller.blocklyOptions" workspace="controller.workspace"></blockly>
+          <blockly options="controller.blocklyOptions" workspace="controller.workspace" on-injected="controller.onInjected"></blockly>
 
           <blockly3></blockly2>
       </div>
@@ -89,6 +89,7 @@
        <p>Firstmakers</p>
     </div>
     <button ng-click="controller.softReset()" type="button" class="btn btn-default" translate>SOFT_RESET</button>
+    <button ng-click="controller.clearBlocks()"  class="btn btn-default" translate>BUTTON_CLEAR_BLOCKS</button>
     <button ng-click="controller.changeLanguage('es')"  class="btn btn-default" ng-class="{'btn-primary': controller.selectedLanguage == 'es'}" translate="BUTTON_LANG_ES"></button>
     <button ng-click="controller.changeLanguage('en')"  class="btn btn-default" ng-class="{'btn-primary': controller.selectedLanguage == 'en'}" translate="BUTTON_LANG_EN"></button>
 
