--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     </div>
     <button ng-click="controller.softReset()" type="button" class="btn btn-default" translate>SOFT_RESET</button>
     <button ng-click="controller.clearBlocks()"  class="btn btn-default" translate>BUTTON_CLEAR_BLOCKS</button>
+    <button ng-click="controller.updateBlocks()"  class="btn btn-default" translate>BUTTON_UPDATE_BLOCKS</button>
     <button ng-click="controller.changeLanguage('es')"  class="btn btn-default" ng-class="{'btn-primary': controller.selectedLanguage == 'es'}" translate="BUTTON_LANG_ES"></button>
     <button ng-click="controller.changeLanguage('en')"  class="btn btn-default" ng-class="{'btn-primary': controller.selectedLanguage == 'en'}" translate="BUTTON_LANG_EN"></button>
 
@@ -128,7 +129,6 @@
     <script src="app.js"></script>
     <script src="app.blocks.initialization.js"></script>
     <script src="controller.js"></script>
-    <script src="services/service.js"></script>
     <script src="services/blockly.service.js"></script>    
     <script src="services/board.service.js"></script>
     <script src="services/virtualBoard.service.js"></script>    
