--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="row">
       
       <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
-          <button ng-click="controller.runCode()" type="button" class="btn btn-default">Ejecutar el código</button>
+          <button ng-click="controller.runCode()" type="button" class="btn btn-default" translate>CODE_RUN</button>
           <blockly options="controller.blocklyOptions" workspace="controller.workspace" on-injected="controller.onInjected"></blockly>
 
           <blockly3></blockly2>
@@ -127,7 +127,7 @@
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="app.js"></script>
-    <script src="app.blocks.initialization.js"></script>
+    <script src="app.blocks.definitions.js"></script>
     <script src="controller.js"></script>
     <script src="services/blockly.service.js"></script>    
     <script src="services/board.service.js"></script>
