--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
 
   <!-- Add your site or application content here -->
   <!-- container -->
-  <div class="container" >    
+  <div class="container" > 
     <div class="row">
       
       <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
-          <button ng-click="controller.runCode()" type="button" class="btn btn-default" translate>CODE_RUN</button>
+          <button ng-show="!controller.running" ng-click="controller.runCode()" type="button" class="btn btn-default text-right"><img src="./images/play.png" width="20"/> <span translate>CODE_RUN</span></button>
+          <button ng-show="controller.running" ng-click="controller.stopCode()" type="button" class="btn btn-default"><img src="./images/stop.png" width="20"/> <span translate>CODE_STOP</span></button>
+
           <blockly options="controller.blocklyOptions" workspace="controller.workspace" on-injected="controller.onInjected"></blockly>
 
           <blockly3></blockly2>
