--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
  
 </head>
-<body ng-app="tideApp" ng-controller="AppController as controller">
+<body ng-app="tideApp" ng-controller="AppController as controller" ng-keydown="controller.onKeyDown($event)" ng-keyup="controller.onKeyUp($event)">
   <!--[if lt IE 7]>
   <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
@@ -91,6 +91,7 @@
     <div class="row">
       
       <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+
           <button ng-show="!controller.running" ng-click="controller.runCode()" type="button" class="btn btn-default text-right"><img src="./images/play.png" width="20"/> <span translate>CODE_RUN</span></button>
           <button ng-show="controller.running" ng-click="controller.stopCode()" type="button" class="btn btn-default"><img src="./images/stop.png" width="20"/> <span translate>CODE_STOP</span></button>
 
