--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="./bower_components/d3/d3.js"></script>
     <script src="./bower_components/underscore/underscore.js"></script>
-    <script src="./bower_components/file-saver/FileSaver.min.js"></script>
+    <!--<script src="./bower_components/file-saver/FileSaver.min.js"></script>-->
     <script src="./bower_components/google-blockly/blockly_compressed.js"></script>
     <script src="./bower_components/google-blockly/blocks_compressed.js"></script>
     <script src="./bower_components/google-blockly/javascript_compressed.js"></script>
