Transparent logo, bower config, window minimum size adjusted

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img src="./images/firstmakers_logo.jpg" alt="Firstmakers Blockly"></a>
+                <a class="navbar-brand" href="#"><img src="./images/firstmakers_logo.png" alt="Firstmakers Blockly"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
