--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+                <!--ul class="nav navbar-nav">
                     <li><a href="#" translate>BLOCKLY_VERSION</a></li>
-                </ul>
+                </ul-->
                 <!--Dropdown User options-->
                 <ul class="nav navbar-nav navbar-right">
                     <li ng-show="controller.username" class="dropdown">
@@ -72,6 +72,12 @@
                             <li ng-class="{'active': controller.selectedLanguage == 'en'}">
                                 <a ng-click="controller.changeLanguage('en')" href="#" translate="BUTTON_LANG_EN"></a>
                             </li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" translate="DEVICES"><span class="caret"></span></a>
+                        <ul class="dropdown-menu" >
+                            <li ng-class="" ng-repeat="device in devices"><a class="pointer" ng-click="connect(device)">{{device}}</a></li>
                         </ul>
                     </li>
                 </ul>  <!-- End Left navbar-->
